<resources>
    <string name="app_name">"VillaVerde"</string>
    <string name="title_formulario_detail">"Formulario " Detail</string>
    <string name="title_activity_lista">Lista</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_medium">sans-serif-medium</string>


    <string name="estado">Estado</string>
    <string name="opcion1">AUSENTE</string>
    <string name="opcion2">ESPERA</string>
    <string name="opcion3">CHAPERÍA</string>
    <string name="opcion4">PINTURA</string>
    <string name="opcion5">TERMINACIONES</string>
    <string name="opcion6">FINALIZADO CONFORME</string>
    <string name="opcion7">FINALIZADO NO CONFORME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
