

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luis.villaverde_tablet.Entrada">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chasis"
        android:textSize="20sp"
        android:fontFamily="@string/roboto_regular"
        android:paddingTop="20dp"/>


    <EditText android:id="@+id/EditText_chasis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapCharacters"
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"
         android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modelo"
        android:textSize="20sp"
        android:fontFamily="@string/roboto_regular"
        android:paddingTop="20dp"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/EditText_marca"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textSize="20sp"
            android:fontFamily="@string/roboto_regular"
            android:paddingTop="20dp"/>


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <RadioButton android:id="@+id/radio_opcion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion1"
                android:textSize="20sp"/>

            <RadioButton android:id="@+id/radio_opcion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion2"
                android:textSize="20sp" />

            <RadioButton android:id="@+id/radio_opcion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion3"
                android:textSize="20sp"/>

            <RadioButton android:id="@+id/radio_opcion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion4"
                android:textSize="20sp"/>

            <RadioButton android:id="@+id/radio_opcion5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion5"
                android:textSize="20sp"/>

            <RadioButton android:id="@+id/radio_opcion6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion6"
                android:textSize="20sp"/>

            <RadioButton android:id="@+id/radio_opcion7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion7"
                android:textSize="20sp"/>

        </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
    <Button android:id="@+id/bDatepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="elegir fecha"
        android:textSize="18sp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"/>

    <TextView android:id="@+id/txDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:textColor="@color/primary_text"/>
            </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Observación"
        android:textSize="20sp"
        android:fontFamily="@string/roboto_regular"
        android:paddingTop="20dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:id="@+id/EditText_multiline"
            android:textSize="20sp"
            android:fontFamily="@string/roboto_regular"/>

        <Button android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="CÁMARA"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />


        <Gallery android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"></Gallery>



        <Button android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="GUARDAR"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>

